--- a/.eslintrc
+++ b/.eslintrc
@@ -101,7 +101,7 @@
             }
         ],
         "linebreak-style": [
-            "error",
+            "off",
             "unix"
         ],
         "lines-around-comment": "off",
